--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "next": "latest",
+    "next-rate-limit": "^0.0.3",
     "react": "latest",
     "react-dom": "latest"
   },
